--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "vue": "^2.5.7",
         "vue-router": "^3.0.1",
         "vuetify": "^1.2.1"
+    },
+    "dependencies": {
+        "particlesjs": "^2.2.3"
     }
 }
